Issue #20786: Fix signatures for dict.__delitem__ and property.__delete__